--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <form>
                 <h1>Login</h1>
                 <div class="input-box">
-                    <input type="text" name="username" id="username" placeholder="Username">
+                    <input type="text" name="username" id="username" placeholder="Usuário">
                 </div>
                 <div class="input-box">
-                    <input type="password" name="password" id="password" placeholder="Password">
+                    <input type="password" name="password" id="password" placeholder="Senha">
                 </div>
                 <div class="remember-forgot">
                     <label>
-                        <input type="checkbox"> Remember me
+                        <input type="checkbox"> Lembrar
                     </label>
-                    <a href="./src/pages/forgot-password.html">Forgot password ?</a>
+                    <a href="./src/pages/forgot-password.html">Esqueci a senha?</a>
                 </div>
                 <button onClick="alert('Enviou!')" type="submit" class="btn">Login</button>
 
