--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     </label>
                     <a href="./src/pages/forgot-password.html">Esqueci a senha?</a>
                 </div>
-                <button onClick="alert('Enviou!')" type="submit" class="btn">Login</button>
+                <button onClick="alert('Carregando...')" type="submit" class="btn">Login</button>
 
                 <div class="register-link">
                     <p>
-                        Don't have an account?
-                        <a href="./src/pages/register.html">Register</a>
+                        Você não tem uma conta registrada?
+                        <a href="./src/pages/register.html">Cadastre-se:</a>
                     </p>
                 </div>
             </form>
